Bug 518174 - No Power Buttons in Start Menu on boot
Summary: No Power Buttons in Start Menu on boot
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: 6.6.3
Platform: Arch Linux Linux
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 518324 518468 518593 519264 519342 519620 520050 (view as bug list)
Depends on:
Blocks:
 
Reported: 2026-03-26 17:01 UTC by Luís Alexandre
Modified: 2026-05-14 16:52 UTC (History)
22 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.5
Sentry Crash Report:


Attachments
Start Menu (12.11 KB, image/png)
2026-03-26 17:01 UTC, Luís Alexandre
Details
Start Menu (Bigger) (69.52 KB, image/png)
2026-03-26 17:04 UTC, Luís Alexandre
Details
Power Management doesn't have sleep option (31.81 KB, image/png)
2026-04-13 21:37 UTC, Luís Alexandre
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luís Alexandre 2026-03-26 17:01:27 UTC
Created attachment 191033 [details]
Start Menu

SUMMARY
When I boot up and login for the first time I don't have Shutdown, Restart and Sleep buttons on the start menu. This started happening when I updated systemd to 260. Rolling back to 259 fixes the problem

At the same time I tried to debug on a new user with default settings and it doesn't happen there. I pinpointed the issue to kded automount being enabled

STEPS TO REPRODUCE
1. Turn on the computer with kded enabled and have an (maybe slow HDD) external drive connected
2. Log in and see that start menu has no power buttons
3. If you logout and relogin or restart plasmashell it gets fixed

OBSERVED RESULT
No Power Buttons in Start Menu

EXPECTED RESULT
Start Menu has Power Buttons

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux
KDE Plasma Version: 6.6.3
KDE Frameworks Version: 6.24.0
Qt Version: 6.11.0

ADDITIONAL INFORMATION
This might be some timing related incompatibility between kded and systemd 260
Comment 1 Luís Alexandre 2026-03-26 17:04:30 UTC
Created attachment 191034 [details]
Start Menu (Bigger)
Comment 2 Nicolas Fella 2026-03-27 11:51:46 UTC
Can't reproduce on KDE Linux, which has systemd 260
Comment 3 Nicolas Fella 2026-03-27 11:54:19 UTC
What's the output of "qdbus --system org.freedesktop.login1 /org/freedesktop/login1 org.freedesktop.login1.Manager.CanPowerOff"?
Comment 4 Luís Alexandre 2026-03-27 15:40:03 UTC
It returns 'true'
I tried to run it in .bash_profile to output to a file and it still returns 'true'. Don't know if I can run that command earlier in the session startup than that.

I will try to explain more. Previously I was using my non-system drives as noauto in fstab, because I thought I could gain some boot time by mounting them with kded (there's no difference after all). I removed the noauto and it fixed the problem. Then I enabled autologin in plasma-login and it's back. It seems it's related to having the session start as early as possible with many plasma services enabled(?)

Try to set autologin as well, krdp, etc

How can I see verbose logs of plasmashell?
Comment 5 Luís Alexandre 2026-03-27 16:05:44 UTC
I meant to say it outputs 'yes', not 'true'
Comment 6 Nicolas Fella 2026-03-30 10:51:19 UTC
*** Bug 518324 has been marked as a duplicate of this bug. ***
Comment 7 Nicolas Fella 2026-04-03 10:02:31 UTC
*** Bug 518468 has been marked as a duplicate of this bug. ***
Comment 8 Antonio Rojas 2026-04-05 18:49:21 UTC
*** Bug 518593 has been marked as a duplicate of this bug. ***
Comment 9 TJ 2026-04-05 19:50:54 UTC
(In reply to Nicolas Fella from comment #3)
> What's the output of "qdbus --system org.freedesktop.login1
> /org/freedesktop/login1 org.freedesktop.login1.Manager.CanPowerOff"?

I am experiencing the same bug and ran this as well.

It also came back as "yes."
Comment 10 kde.absence002 2026-04-06 23:32:11 UTC
I am also experiencing this bug which is very annoying
Comment 11 TraceyC 2026-04-08 14:56:27 UTC
Setting to CONFIRMED since multiple people are affected
Comment 12 Marco Brancalion 2026-04-08 17:19:55 UTC
Days ago after a reboot it disappeared. After 2-3 reboots it returned.
Comment 13 kde.absence002 2026-04-08 22:08:52 UTC
(In reply to Marco Brancalion from comment #12)
> Days ago after a reboot it disappeared. After 2-3 reboots it returned.

This bug has not subsided for me personally


For more detail it seems to be with all plasmoids as the user switcher also doesn't work anymore for these options. I've also found the only option given on the lock screen is now "switch user" although I'm not sure if I'm misremembering (maybe that was the only option? But I swore there were more) 

CTRL+ALT+DEL still works and I can shutdown from there but it is not my preferred method
Comment 14 Loc Tran 2026-04-09 01:22:05 UTC
(In reply to Marco Brancalion from comment #12)
> Days ago after a reboot it disappeared. After 2-3 reboots it returned.

For me, it did that then disappears again later.
Comment 15 Kevin 2026-04-09 09:46:18 UTC
I can reproduce this bug by doing the following.
Have a USB HDD (in my case connected).
In systemsettings under Datenträger & Kameras (likely drives & cameras) set an automount on login and device connect for this drive.
Reboot 
Login
Power buttons like Standy, Restart, Shutdown are gone.
Logout 
Log in
Buttons are back.

Remove the automount in systemsettibgs
Reboot
Login
Buttons are working fine

I'm on 6.6.4 also on Arch Linux.
Comment 16 xniksysx 2026-04-09 09:52:52 UTC
On fresh and clean install Arch width Plasma 6.6.3, the bug is not reproducible, even if you enable automatic mounting of disks in the settings. Maybe somthing with old config and version? Or it maybe something with system file permissions.
Comment 17 TraceyC 2026-04-09 09:56:43 UTC
(In reply to Kevin from comment #15)
> I can reproduce this bug by doing the following.

Can you reproduce this with a brand new user, keeping all default settings except for the automount?
Comment 18 kde.absence002 2026-04-09 10:18:04 UTC
(In reply to xniksysx from comment #16)
> On fresh and clean install Arch width Plasma 6.6.3, the bug is not
> reproducible, even if you enable automatic mounting of disks in the
> settings. Maybe somthing with old config and version? Or it maybe something
> with system file permissions.

I'm on an arch derivative as well (Garuda) and also have multiple drives (internal) automount. When I get the chance I'll try disabling auto mounting and see if the issue changes p
Comment 19 TraceyC 2026-04-09 12:57:44 UTC
Thanks everyone. I'll set this as NEEDSINFO so it will remind us in 2 weeks if there hasn't been a response.
Comment 20 kde.absence002 2026-04-09 21:39:55 UTC
(In reply to kde.absence002 from comment #18)
> (In reply to xniksysx from comment #16)
> > On fresh and clean install Arch width Plasma 6.6.3, the bug is not
> > reproducible, even if you enable automatic mounting of disks in the
> > settings. Maybe somthing with old config and version? Or it maybe something
> > with system file permissions.
> 
> I'm on an arch derivative as well (Garuda) and also have multiple drives
> (internal) automount. When I get the chance I'll try disabling auto mounting
> and see if the issue changes p



I just tested. Turning off automount on all my drives resolved the issue
Comment 21 TJ 2026-04-09 23:15:30 UTC
(In reply to Kevin from comment #15)
> I can reproduce this bug by doing the following.
> Have a USB HDD (in my case connected).

This particular bug I only noticed after I got a QNAP TR-004 HDD enclosure and I set one drive to automount at startup. Before I got the enclosure I had no external drives opening on startup.
Comment 22 TraceyC 2026-04-10 09:53:53 UTC
(In reply to kde.absence002 from comment #20)

> I just tested. Turning off automount on all my drives resolved the issue

Thanks. 
Can you reproduce this with a brand new user, keeping all default settings except for the automount?
Comment 23 kde.absence002 2026-04-10 10:32:04 UTC
(In reply to TraceyC from comment #22)
> (In reply to kde.absence002 from comment #20)
> 
> > I just tested. Turning off automount on all my drives resolved the issue
> 
> Thanks. 
> Can you reproduce this with a brand new user, keeping all default settings
> except for the automount?

Simply for clarity. I assume you mean to create a new user, edit nothing and simply enable automount as to see if automount alone is the issue or of there's more configuration? It so I should be able to do so within the next 24 hours
Comment 24 Kevin 2026-04-10 11:58:43 UTC
(In reply to TraceyC from comment #17)
> (In reply to Kevin from comment #15)
> > I can reproduce this bug by doing the following.
> 
> Can you reproduce this with a brand new user, keeping all default settings
> except for the automount?

Yes I can.

I also tried installing Cachyos inside a VM to make sure that it's not related to any configuration I did inside my Arch install.
Same exact behavior on Cachyos. Created a new user there as well just to be sure.

It only happens when the drive actually gets mounted.
If I disconnect it before reboot the behavior vanishes.

I tried with USB 3 HDD enclosures and a SanDisk Ultra USB 3 thumb drive.

My initial assumption it might be x11 session related also turned out to be not the case because cachy is running on Wayland compared to my personal installation (need x11 for remote desktop).
Comment 25 TraceyC 2026-04-10 12:18:13 UTC
(In reply to Kevin from comment #24)
Thanks for the extra troubleshooting, that's very helpful
Comment 26 carrot-spiffy-hurt 2026-04-10 16:51:48 UTC
Yesterday (2026-04-09T15:17) I upgraded my CachyOS system (including systemd 259 -> 260) through pacman and after rebooting, my shutdown-button in the kde plasma start menu was gone as well. Same thing happened on a mate's CachyOS install after he updated a couple days ago.
This bug happens on every boot and indeed goes away temporarily when logging out and back in again. 

I'm currently just using "shutdown now" as a workaround, which still works fine. Normally I'm just pressing my physical power button, which has been configured to call a shutdown through kde plasma, but that also doesn't work. So it's probably not just a GUI bug here.

Kernel: 6.19.11-1-cachyos
Desktop: KDE Plasma v: 6.6.4 tk: Qt v: N/A wm: kwin_wayland dm: 1: GDM
    v: 50.0 2: SDDM note: stopped Distro: CachyOS base: Arch Linux

I am not running any slow/external HDD devices. Just internal SSDs. Same on my mate's computer, so I'm not sure if this really is a factor here.

'qdbus --system org.freedesktop.login1 /org/freedesktop/login1 org.freedesktop.login1.Manager.CanPowerOff' returns:
yes
Comment 27 Sylens 2026-04-10 20:51:28 UTC
Unable to reproduce this on my Garuda Linux (which is also 'Arch btw' based, I couldn't resist kekw)

Systemd 260.1-1
Which got updated 5days ago as per my pacman log
[2026-04-05T16:47:24+0200] [ALPM] upgraded systemd (259.3-1 -> 260.1-1)

And I'm one of the most techgeek technerds on the earth, and I use my PC nonstop (like I mean nonstop, it's like I get IT by infusion lol).

Operating System: Garuda Linux 
KDE Plasma Version: 6.6.4
KDE Frameworks Version: 6.25.0
Qt Version: 6.11.0
Kernel Version: 6.19.11-zen1-1-zen (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i5-6500 CPU @ 3.20GHz
Memory: 16 GiB of RAM (15.6 GiB usable)
Graphics Processor: NVIDIA GeForce GTX 1050 Ti
Manufacturer: MSI
Product Name: MS-7972
System Version: 2.0
Comment 28 TJ 2026-04-10 21:42:41 UTC
> I just tested. Turning off automount on all my drives resolved the issue

I just went into my disk management utility (GNOME-Disks) and selected the drive I have automount in question and went to "Edit Mount Options" and turned off the "User Session Defaults" and selected it to automount that way (I used to have to do this for an internal drive I had that had trouble automounting.)

Gave the system a reboot (which normally would cause the icons in question to disappear) and both the Power and Restart icons remained.

Will have to use my computer for a bit to see if this is an effective way to sidestep this error.

I would like to have this drive automount as it is a drive I interact with in almost every session on my computer so I hope this works.
Comment 29 kde.absence002 2026-04-11 01:53:41 UTC
(In reply to kde.absence002 from comment #23)
> (In reply to TraceyC from comment #22)
> > (In reply to kde.absence002 from comment #20)
> > 
> > > I just tested. Turning off automount on all my drives resolved the issue
> > 
> > Thanks. 
> > Can you reproduce this with a brand new user, keeping all default settings
> > except for the automount?
> 
> Simply for clarity. I assume you mean to create a new user, edit nothing and
> simply enable automount as to see if automount alone is the issue or of
> there's more configuration? It so I should be able to do so within the next
> 24 hours



Created a new user, I tried both Standard and Administrator new users. Added the requisite plasmoids and enabled automount. The issue did not show up. So I returned to my main user an enabled automount again to see if the issue would return if I did on my main user. The issue returned on my main. 

Not sure why automount has no effect on the new user both Standard and Administrator but on my original user, automount breaks the plasmoid
Comment 30 TraceyC 2026-04-11 09:43:36 UTC
(In reply to kde.absence002 from comment #29)
> Created a new user, I tried both Standard and Administrator new users. Added
> the requisite plasmoids and enabled automount. The issue did not show up. So
> I returned to my main user an enabled automount again to see if the issue
> would return if I did on my main user. The issue returned on my main. 
> 
> Not sure why automount has no effect on the new user both Standard and
> Administrator but on my original user, automount breaks the plasmoid

Thanks for troubleshooting that. This suggests that your existing user account has some configuration in it that's causing this issue. Which means that it's likely a case of old, previously-supported configuration data being unsupported today and interacting poorly with modern code.

If you could identify which exact thing is causing it, we can determine which of those options it is. If not, then I don't think we'll be able to make any further progress here unfortunately. Your best bet is to diff the KDE related rc files under ~/.config/ between the new user and your regular user.
Comment 31 TJ 2026-04-11 17:52:26 UTC
(In reply to TJ from comment #28)
> > I just tested. Turning off automount on all my drives resolved the issue
> 
> I just went into my disk management utility (GNOME-Disks) and selected the
> drive I have automount in question and went to "Edit Mount Options" and
> turned off the "User Session Defaults" and selected it to automount that way

Have used  my computer extensively since posting this and can confirm it appears to placate the issue.  Have not had the icons disappear.
Comment 32 kde.absence002 2026-04-12 02:42:36 UTC
I've decided to hunt down the cause of the bug and believe I have found it

Garuda Linux / Arch, systemd 260.1-1-arch, Plasma 6.6.4


I can reproduce without autologin (using manual login via SDDM is sufficient.)
My fstab contains no external drives; secondary drives are handled entirely by kded automount. The bug occurs despite this.
The bug does not occur on a freshly created user account with the same automount setting, pointing to a user config difference.
After bisecting kded modules via ~/.config/kded5rc, I narrowed it down to plasmavault's load order:

[Module-plasmavault] omitted from kded5rc (default) → bug occurs
[Module-plasmavault] autoload=true → bug occurs
[Module-plasmavault] autoload=false → bug is fixed

Notably, plasmavault loads regardless of the setting — qdbus6 org.kde.kded6 /kded org.kde.kded6.loadedModules shows it present in all three cases. This suggests the explicit false entry delays plasmavault's initialization relative to other modules, which is enough to prevent the race condition (which is what my guess is but I'm no programmer) 


As seen if i run
qdbus6 org.kde.kded6 /kded org.kde.kded6.loadedModules | sort
appmenu
audioshortcutsservice
baloosearchmodule
bluedevil
browserintegrationflatpakintegrator
desktopnotifier
device_automounter
devicenotifications
donationmessage
freespacenotifier
gtkconfig
kameleon
kded_accounts
kded_bolt
kded_plasma_welcome
keyboard
ktimezoned
kwrited
lookandfeelautoswitcher
mprisservice
networkmanagement
oom-notifier
plasma_accentcolor_service
plasma-session-shortcuts
plasmavault
printmanager
remotenotifier
smart
smbwatcher
statusnotifierwatcher
wacomtablet
wpad-detector

plasmavault is still a loaded module despite explicitly setting it to false.

Potential workaround for affected users: Add the following to ~/.config/kded5rc:
[Module-plasmavault]
autoload=false
Comment 33 carrot-spiffy-hurt 2026-04-12 17:52:04 UTC
I was able to make some good progress on this. Hope you can now reproduce this issue on your systems.

So in my case it doesn't have anything to do with automount or autologin. On my system, automount isn't enabled through KDE. Autologin can be toggled on or off and doesn't change the problem. I still see no shutdown nor reboot button. "plasmavault" isn't even loaded for me, so this workaround:
"[Module-plasmavault]
autoload=false"
doesn't change anything.

But after I created a new user and thought about my individual system init process, I was able to find the cause of this issue on my system. It's a script that I use to sync files with rclone. It runs as a systemd service and uses systemd-inhibit to inhibit sleep, idle and shutdown whenever the sync process is active. In the past this didn't cause any issues, but now it has. I was able to create a minimal setup that reproduces this problem for me. Here's how:
1. create a fresh standard account
2. save this simple sh script somewhere (not sure if the sleep calls are really necessary here):
#!/bin/bash

inhibit() {
  echo "inhibit started"
  systemd-inhibit --why="inhibit TEST" sleep infinity &
  sleep 2
}

echo "inhibiting ..."
inhibit

while true; do
  sleep 5
  inhibit
done
---------------
3. install it as a simple systemd service, so that systemd-inhibit blocks 'shutdown'
4. reboot and see the shutdown/reboot buttons disappear
5. changing the --what value to "sleep:idle" (default is sleep:idle:shutdown) will show the shutdown/reboot buttons again after a reboot, so, as you'd expect, only the shutdown inhibition seems relevant here

It seems to me that plasmashell (or whatever component is responsible) sees the shutdown inhibition on startup and gets stuck in this state. My original rclone-sync script only inhibits during syncs, so I would have expected that plasmashell would check again periodically or event-based, if the shutdown inhibition is still active. But in any case I'd expect the shutdown/reboot buttons to always be available. These buttons should always be visible and clickable and on click ask the user if he wants to override an active shutdown inhibition. Much like 'systemctl reboot' alerts the user to this fact and suggests 'systemctl reboot -i' to override it.
Comment 34 Nicolas Fella 2026-04-13 10:00:48 UTC
Thanks for the investigation, very useful.

This can easily be reproduced by running "systemd-inhibit --why="inhibit TEST" sleep infinity" and then "plasmashell --replace".

The release notes for systemd 260 have

>The org.systemd.login1.Manager D-Bus interface has a minor API break.
>The CanPowerOff(), CanReboot(), CanSuspend(), etc. family of methods
> have introduced new return values which may break downstream
>consumers such as desktop environments. The new return values more
>precisely communicate the status of inhibitors: 'inhibited',
>'inhibitor-blocked', and 'challenge-inhibitor-blocked'. This allows
>desktops to differentiate between system administrator policy and
>temporary restrictions imposed by inhibitors.

so if the status is any of the new values at startup the buttons will be missing
Comment 35 Luís Alexandre 2026-04-13 21:36:21 UTC
Yep that is surely the cause

I would like to add another issue I noticed today, don't know if I should open a new bug report since it's related to this systemd breaking change as well. 

I had set up the system to go to sleep after 15min of inactivity or when the physical power button. When I don't have the power buttons in the start menu this doesn't work

Again restarting plasmashell / logging out and back in fix the issue
Comment 36 Luís Alexandre 2026-04-13 21:37:58 UTC
Created attachment 191506 [details]
Power Management doesn't have sleep option
Comment 37 Nicolas Fella 2026-04-22 13:35:44 UTC
*** Bug 519264 has been marked as a duplicate of this bug. ***
Comment 38 Antonio Rojas 2026-04-24 06:49:33 UTC
*** Bug 519342 has been marked as a duplicate of this bug. ***
Comment 39 David REVOY 2026-04-24 18:03:41 UTC
Just adding to this thread that the bug reached debian-testing KDE Plasma too.

$systemctl --version
systemd 260 (260.1-1)

$plasmashell -v
plasmashell 6.6.3
Comment 40 Nicolas Fella 2026-04-30 18:46:09 UTC
*** Bug 519620 has been marked as a duplicate of this bug. ***
Comment 41 Bug Janitor Service 2026-04-30 19:42:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6546
Comment 42 Nicolas Fella 2026-05-02 14:53:42 UTC
Git commit 07750c8a7cc89d532ec852a677772b0402a16ba8 by Nicolas Fella.
Committed on 02/05/2026 at 12:21.
Pushed by nicolasfella into branch 'master'.

libkworkspace: Handle new states from logind

systemd 260 introduces new states for CanReboot/CanPoweroff/etc

We need to adjust our code to not trip over those

This is a bit of a hotfix, ideally we would properly indicate in the UI that a given action is temporarily inhibited

M  +3    -1    libkworkspace/sessionmanagementbackend.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/07750c8a7cc89d532ec852a677772b0402a16ba8
Comment 43 Nicolas Fella 2026-05-02 14:54:03 UTC
Git commit 8f6d71715a70e5c73d322619163dce738993724b by Nicolas Fella.
Committed on 02/05/2026 at 14:53.
Pushed by nicolasfella into branch 'Plasma/6.6'.

libkworkspace: Handle new states from logind

systemd 260 introduces new states for CanReboot/CanPoweroff/etc

We need to adjust our code to not trip over those

This is a bit of a hotfix, ideally we would properly indicate in the UI that a given action is temporarily inhibited
(cherry picked from commit 07750c8a7cc89d532ec852a677772b0402a16ba8)

M  +3    -1    libkworkspace/sessionmanagementbackend.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/8f6d71715a70e5c73d322619163dce738993724b
Comment 44 TraceyC 2026-05-12 16:18:37 UTC
*** Bug 520050 has been marked as a duplicate of this bug. ***
Comment 45 piedro 2026-05-14 16:27:20 UTC
Is this considered to be fixed? 

What's the version the fix should show up - I am running 6.6.4 and I don't see any change. 
Is there anything me as a user has to do to make it work and get the shutdown buttons again?

thx, 
jhhh
Comment 46 piedro 2026-05-14 16:29:28 UTC
Also: how can I edit typos in my comments here? 

thx, pk
Comment 47 Nate Graham 2026-05-14 16:52:43 UTC
As the "version fixed/implemented in" field says: 6.6.5. Which was actually released two days ago.