libkworkspace: Handle new states from logind

systemd 260 introduces new states for CanReboot/CanPoweroff/etc

We need to adjust our code to not trip over those

This is a bit of a hotfix, ideally we would properly indicate in the UI that a given action is temporarily inhibited

BUG: 518174